# multi-robot-svbp

./: .gitignore  README.md  pyproject.toml  setup.py
data/: common_corridor.yml  obstacles_mix.yml  squares.yml  squares_3x3.yml  trypophobia.yml  two_rooms.yml
data/scenes/: curvy_wurvy.yml  end_of_lessons.yml  obstacles_mix_circle.yml  pitch.yml  squares_3x3_cross.yml  squares_cross.yml  squares_swap.yml  swap_rooms.yml
scripts/: point_robot_stein_mpc.py  run_collision_avoid_gabp.py  run_collision_avoid_svbp.py
scripts/utils/: point_swarm.py
scripts/viz/: draw_scenes.py  make_graphs.py  make_mbot_graphs.py  visualize_gaussian_traj.py  visualize_particles.py
src/multi_robot_svbp/controllers/: gbp_controller.py  mpc.py  svbp_controller.py
src/multi_robot_svbp/costs/: __init__.py  base_costs.py  obstacle_costs.py  trajectory_costs.py
src/multi_robot_svbp/envs/: __init__.py  point_swarm.py
src/multi_robot_svbp/factors/: flock_factors.py  linear_gaussian_base_factors.py  linear_gaussian_trajectory_factors.py  trajectory_factors.py
src/multi_robot_svbp/sim/: map.py  robot.py
src/multi_robot_svbp/utils/: distance.py  plotting.py  scenario_loader.py
unit_tests/: cost_test.py  replicate_collisionavoid_factors_test.py  replicate_diff_map_test.py  replicate_linear_pt_robot_test.py  sim_test.py
